--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,13 @@
 .profile-pic {
   position: relative;
-  max-width:130px;
-  max-height:130px;
+  max-width: 130px;
+  max-height: 130px;
   width: auto;
   height: auto;
   overflow: hidden;
-  /* display: inline-block; */
-  
-  
-  /* background-size: cover;  */
-  margin: -31px; 
-  margin-left:-7px;
-  border: 6px solid rgba(0, 77, 64, 0.4); 
+  margin: -31px;
+  margin-left: -7px;
+  border: 6px solid rgba(26, 46, 64, 0.4); /* Navy Blue Border */
   border-radius: 50% !important;
 }
 
@@ -21,19 +17,17 @@
 }
 
 .tracker {
-  /* visibility: hidden; */
   position: fixed;
-  /* margin-inline-end: auto;  */
-  bottom: 0; 
+  bottom: 0;
   right: 0;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url('https://fonts.googleapis.com/css?family=Poiret+One');
+
 .social {
   margin: 0 auto;
   width: auto;
   text-align: inherit;
-  /* padding: 10px; */
 }
 
 .icon-btn {
@@ -51,15 +45,15 @@
 }
 
 .github {
-  color: black;
+  color: #1A2E40; /* Navy Blue */
 }
 
 .linkedin {
-  color: #0077b5;
+  color: #4C9BCC; /* Light Blue */
 }
 
 .angellist {
-  color: grey;
+  color: #7D889C; /* Steel Gray */
 }
 
 .icon-btn:hover {
@@ -68,15 +62,15 @@
 }
 
 .linkedin:hover {
-  background-color: #0077b5;
+  background-color: #4C9BCC;
 }
 
 .angellist:hover {
-  background-color: grey;
+  background-color: #7D889C;
 }
 
 .github:hover {
-  background-color: black;
+  background-color: #1A2E40;
 }
 
 /* Buttons - Read Me, Contact Us */
@@ -84,94 +78,63 @@
 .readme {
   position: relative;
   padding: 11px 35px;
-  background: #fff;
-  color: #00796b;
-  border: 2px solid #fff;
+  background: #FFFFFF;
+  color: #1A2E40; /* Navy Blue */
+  border: 2px solid #FFFFFF;
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
   display: inline-block;
   border-radius: 5px;
-  -webkit-border-radius: 5px;
 }
-
-/* .readme:hover{
-  color: white;
-  background-color: #00796b;
-} */
 
 .contactme {
   position: relative;
   padding: 11px 35px;
   background: none;
-  color: #fff;
-  border: 2px solid #fff;
+  color: #FFFFFF;
+  border: 2px solid #FFFFFF;
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
   display: inline-block;
   margin-top: 1.5em;
   border-radius: 5px;
-  -webkit-border-radius: 5px;
 }
 
-.contactme:hover{
-  color: #00796b;
-  background-color: white;
+.contactme:hover {
+  color: #1A2E40; /* Navy Blue */
+  background-color: #FFFFFF;
 }
-/* main body */
-
-/* body-color */
 
 body {
-  color: #333;
+  color: #333; /* Dark Gray Text */
   font-size: 18px;
 }
-
-/* body {
-  color: black;
-  font-size: 18px;
-} */
-
-/* main a -- links */
-
-/* a {
-  color: #009688;
-} */
 
 a {
-  color: #004d40;
+  color: #1A2E40; /* Navy Blue */
 }
-
-/* main blockqoute */
-
-/* blockquote {
-  border-left: 5px solid #795548;
-  color: #795548;
-  font-size: 125%;
-  font-weight: 400;
-  margin: 20px 0;
-  padding-left: 1.5rem;
-} */
 
 blockquote {
-  border-left: 5px solid #795548;
-  color: #795548;
+  border-left: 5px solid #4C9BCC; /* Light Blue Border */
+  color: #4C9BCC;
   font-size: 125%;
   font-weight: 400;
   margin: 20px 0;
-  padding-left: 1.5rem;
-}
-
-blockquote * {
-  font-size: inherit;
-  line-height: inherit;
-}
+  padding-lef
 
 .text-center {
   text-align: center;
 }
 
+.teal-text {
+  color: #8ABF8B !important; /* Sage Green */
+}
+
+.teal {
+  background-color: #8ABF8B !important; /* Sage Green */
+}
 /* main nav */
 
 nav {
