--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,17 @@
 .profile-pic {
   position: relative;
-  max-width: 130px;
-  max-height: 130px;
+  max-width:130px;
+  max-height:130px;
   width: auto;
   height: auto;
   overflow: hidden;
-  margin: -31px;
-  margin-left: -7px;
-  border: 6px solid rgba(26, 46, 64, 0.4); /* Navy Blue Border */
+  /* display: inline-block; */
+  
+  
+  /* background-size: cover;  */
+  margin: -31px; 
+  margin-left:-7px;
+  border: 6px solid rgba(0, 77, 64, 0.4); 
   border-radius: 50% !important;
 }
 
@@ -17,17 +21,19 @@
 }
 
 .tracker {
+  /* visibility: hidden; */
   position: fixed;
-  bottom: 0;
+  /* margin-inline-end: auto;  */
+  bottom: 0; 
   right: 0;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Poiret+One');
-
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
 .social {
   margin: 0 auto;
   width: auto;
   text-align: inherit;
+  /* padding: 10px; */
 }
 
 .icon-btn {
@@ -45,15 +51,15 @@
 }
 
 .github {
-  color: #1A2E40; /* Navy Blue */
+  color: black;
 }
 
 .linkedin {
-  color: #4C9BCC; /* Light Blue */
+  color: #0077b5;
 }
 
 .angellist {
-  color: #7D889C; /* Steel Gray */
+  color: grey;
 }
 
 .icon-btn:hover {
@@ -62,15 +68,15 @@
 }
 
 .linkedin:hover {
-  background-color: #4C9BCC;
+  background-color: #0077b5;
 }
 
 .angellist:hover {
-  background-color: #7D889C;
+  background-color: grey;
 }
 
 .github:hover {
-  background-color: #1A2E40;
+  background-color: black;
 }
 
 /* Buttons - Read Me, Contact Us */
@@ -78,63 +84,94 @@
 .readme {
   position: relative;
   padding: 11px 35px;
-  background: #FFFFFF;
-  color: #1A2E40; /* Navy Blue */
-  border: 2px solid #FFFFFF;
+  background: #fff;
+  color: #001679;
+  border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
   display: inline-block;
   border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
+
+/* .readme:hover{
+  color: white;
+  background-color: #001679;
+} */
 
 .contactme {
   position: relative;
   padding: 11px 35px;
   background: none;
-  color: #FFFFFF;
-  border: 2px solid #FFFFFF;
+  color: #fff;
+  border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
   display: inline-block;
   margin-top: 1.5em;
   border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
 
-.contactme:hover {
-  color: #1A2E40; /* Navy Blue */
-  background-color: #FFFFFF;
+.contactme:hover{
+  color: #001679;
+  background-color: white;
 }
+/* main body */
+
+/* body-color */
 
 body {
-  color: #333; /* Dark Gray Text */
+  color: #333;
   font-size: 18px;
 }
 
+/* body {
+  color: black;
+  font-size: 18px;
+} */
+
+/* main a -- links */
+
+/* a {
+  color: #009688;
+} */
+
 a {
-  color: #1A2E40; /* Navy Blue */
+  color: #001679;
 }
 
-blockquote {
-  border-left: 5px solid #4C9BCC; /* Light Blue Border */
-  color: #4C9BCC;
+/* main blockqoute */
+
+/* blockquote {
+  border-left: 5px solid #795548;
+  color: #795548;
   font-size: 125%;
   font-weight: 400;
   margin: 20px 0;
-  padding-lef
+  padding-left: 1.5rem;
+} */
+
+blockquote {
+  border-left: 5px solid #795548;
+  color: #795548;
+  font-size: 125%;
+  font-weight: 400;
+  margin: 20px 0;
+  padding-left: 1.5rem;
+}
+
+blockquote * {
+  font-size: inherit;
+  line-height: inherit;
+}
 
 .text-center {
   text-align: center;
 }
 
-.teal-text {
-  color: #8ABF8B !important; /* Sage Green */
-}
-
-.teal {
-  background-color: #8ABF8B !important; /* Sage Green */
-}
 /* main nav */
 
 nav {
@@ -200,7 +237,7 @@ ul.side-nav li {
 
 ul.side-nav.fixed a {
   box-sizing: content-box;
-  color: rgb(16, 202, 56);
+  color: #001679;
   display: block;
   line-height: 100%;
   padding: 10px 0 12px;
@@ -512,7 +549,7 @@ small {
 /* main .teal-text */
 
 .teal-text {
-  color: #008073 !important;
+  color: #001679 !important;
 }
 
 /* .teal-text {
@@ -522,7 +559,7 @@ small {
 /* .teal */
 
 .teal {
-  background-color: #008073 !important;
+  background-color: #001679 !important;
 }
 
 /* .teal {
@@ -565,7 +602,7 @@ small {
     position: absolute;
   }
   nav a.button-collapse, nav a.button-collapse i {
-    color: #009688;
+    color: #001679;
     height: 56px;
     line-height: 56px;
   }
