--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,9 +84,9 @@
 .readme {
   position: relative;
   padding: 11px 35px;
-  background: #fff;
-  color: #00796b;
-  border: 2px solid #fff;
+  background: #e3f2fd;;
+  color: #004080;;
+  border: 2px solid #004080;
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
@@ -104,7 +104,7 @@
   position: relative;
   padding: 11px 35px;
   background: none;
-  color: #fff;
+  color: #004080;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -237,7 +237,7 @@ ul.side-nav li {
 
 ul.side-nav.fixed a {
   box-sizing: content-box;
-  color: rgb(16, 202, 56);
+  color: #1565c0; 
   display: block;
   line-height: 100%;
   padding: 10px 0 12px;
@@ -320,7 +320,7 @@ h3 {
 } */
 
 #intro.section {
-  background: #a7ffeb repeat;
+  background: #e0f7fa; repeat;
   position: relative;
 }
 
@@ -377,6 +377,7 @@ h3 {
 .card .role {
   font-size: 1.25rem;
   position: absolute;
+  color: #1e88e5;
   right: 38px;
   top: 35px;
 }
@@ -428,7 +429,7 @@ h3 {
 
 .card-action span {
   font-size: 85%;
-  color: #666;
+  color: #0d47a1;
 }
 
 .card ul {
@@ -549,17 +550,17 @@ small {
 /* main .teal-text */
 
 .teal-text {
-  color: #008073 !important;
+  color: #004080 !important; /* Example: Dark blue */
 }
 
-/* .teal-text {
+/* \.teal-text {
   color: #0b5e86 !important;
 } */
 
 /* .teal */
 
 .teal {
-  background-color: #008073 !important;
+  background-color: #004080 !important; /* Example: Dark blue */
 }
 
 /* .teal {
